--- a/index.html
+++ b/index.html
@@ -192,17 +192,17 @@
             const servers = [
                 {
                     name: "سيرفر 1 (تجريبي)",
-                    url: "https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8",
+                    url: "http://het104a.4rouwanda-shop.store/live/918454578001/index.m3u8?t=VjVKc6bM5AxWCkCuswyAWw&e=1752148716",
                     type: "hls"
                 },
                 {
                     name: "سيرفر 2 (تجريبي)",
-                    url: "https://bitdash-a.akamaihd.net/content/MI201109210084_1/m3u8s/f08e80da-bf1d-4e3d-8899-f0f6155f6efa.m3u8",
+                    url: "http://het104a.4rouwanda-shop.store/live/918454578001/index.m3u8?t=VjVKc6bM5AxWCkCuswyAWw&e=1752148716",
                     type: "hls"
                 },
                 {
                     name: "سيرفر 3 (MP4)",
-                    url: "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4",
+                    url: "http://het104a.4rouwanda-shop.store/live/918454578001/index.m3u8?t=VjVKc6bM5AxWCkCuswyAWw&e=1752148716",
                     type: "mp4"
                 }
             ];
