--- a/index.html
+++ b/index.html
@@ -192,17 +192,17 @@
             const servers = [
                 {
                     name: "سيرفر 1 (تجريبي)",
-                    url: "http://het104a.4rouwanda-shop.store/live/918454578001/index.m3u8?t=VjVKc6bM5AxWCkCuswyAWw&e=1752148716",
+                    url: "https://d3o3cim6uzorb4.cloudfront.net/out/v1/0965e4d7deae49179172426cbfb3bc5e/index.m3u8",
                     type: "hls"
                 },
                 {
                     name: "سيرفر 2 (تجريبي)",
-                    url: "http://het104a.4rouwanda-shop.store/live/918454578001/index.m3u8?t=VjVKc6bM5AxWCkCuswyAWw&e=1752148716",
+                    url: "https://d3o3cim6uzorb4.cloudfront.net/out/v1/0965e4d7deae49179172426cbfb3bc5e/index.m3u8",
                     type: "hls"
                 },
                 {
                     name: "سيرفر 3 (MP4)",
-                    url: "http://het104a.4rouwanda-shop.store/live/918454578001/index.m3u8?t=VjVKc6bM5AxWCkCuswyAWw&e=1752148716",
+                    url: "https://d3o3cim6uzorb4.cloudfront.net/out/v1/0965e4d7deae49179172426cbfb3bc5e/index.m3u8",
                     type: "mp4"
                 }
             ];
