--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             const servers = [
                 {
                     name: "سيرفر رئيسي",
-                    url: "https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8",
+                    url: "http://het105a.4rouwanda-shop.store/live/918454578001/index.m3u8",
                     type: "hls"
                 },
                 {
