--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مشغل فيديو متعدد السيرفرات | Multi-Server HLS Player</title>
+    <title>Server Oussama</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -736,5 +736,6 @@
             initServerList();
         });
     </script>
+    <script type='text/javascript' src='//pl27131581.profitableratecpm.com/90/28/47/902847673fff3f81878001c25c49320d.js'></script>
 </body>
 </html>
