--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
     <header class="header">
         <div class="header-content">
             <div class="logo-container">
-                <img src="https://via.placeholder.com/50x50/4361ee/ffffff?text=LOGO" alt="شعار الموقع" class="logo">
+                <img src="https://k.top4top.io/p_3478hxiyr1.png" alt="شعار الموقع" class="logo">
                 <h1 class="site-name">OSM LIVE</h1>
             </div>
             <div class="copyright">جميع الحقوق محفوظة &copy; <span id="current-year"></span></div>
