--- a/index.html
+++ b/index.html
@@ -737,5 +737,6 @@
         });
     </script>
     <script type='text/javascript' src='//pl27131581.profitableratecpm.com/90/28/47/902847673fff3f81878001c25c49320d.js'></script>
+    <script type='text/javascript' src='//pl27131581.profitableratecpm.com/90/28/47/902847673fff3f81878001c25c49320d.js'></script>
 </body>
 </html>
