--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
             const servers = [
                 {
                     name: "سيرفر رئيسي",
-                    url: "http://het105a.4rouwanda-shop.store/live/918454578001/index.m3u8",
+                    url: "http://ugeen.live:8080/Ugeen_VIP2q0zPq/Q9AnY0/3221",
                     type: "hls",
                     badge: "مباشر",
                     ping: 120
