--- a/index.html
+++ b/index.html
@@ -877,21 +877,21 @@
                 },
                 {
                     name: "سيرفر احتياطي",
-                    url: "https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8",
+                    url: "http://ugeen.live:8080/Ugeen_VIP2q0zPq/Q9AnY0/3221",
                     type: "hls",
                     badge: "تجريبي",
                     ping: 180
                 },
                 {
                     name: "سيرفر MP4",
-                    url: "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4",
+                    url: "http://ugeen.live:8080/Ugeen_VIP2q0zPq/Q9AnY0/3221",
                     type: "mp4",
                     badge: "تجريبي",
                     ping: 90
                 },
                 {
                     name: "سيرفر TS",
-                    url: "https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8",
+                    url: "http://ugeen.live:8080/Ugeen_VIP2q0zPq/Q9AnY0/3221",
                     type: "hls",
                     badge: "تجريبي",
                     ping: 150
@@ -1300,6 +1300,5 @@
             document.head.appendChild(style);
         });
     </script>
-    <script type='text/javascript' src='//pl27130835.profitableratecpm.com/e1/30/e5/e130e59cd573d04883b03f5a83ef841a.js'></script>
 </body>
 </html>
