--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       width="100%"
       height="auto"
       data-setup='{}'>
-      <source src="http://het105a.4rouwanda-shop.store/live/918454578001/index.m3u8" type="application/x-mpegURL" />
+      <source src="https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8" type="application/x-mpegURL" />
       عذرًا، متصفحك لا يدعم تشغيل الفيديو.
     </video>
   </div>
