--- a/index.html
+++ b/index.html
@@ -2,44 +2,49 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>مشغل m3u8 احترافي</title>
-  <link href="https://vjs.zencdn.net/8.5.2/video-js.css" rel="stylesheet" />
+  <title>مشغل M3U8 احترافي</title>
   <style>
     body {
-      background-color: #111;
+      background-color: #000;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
-      font-family: 'Tahoma', sans-serif;
     }
-    .video-container {
+    video {
       width: 90%;
       max-width: 800px;
-      box-shadow: 0 0 20px #00bcd4;
+      border: 4px solid #4997d0;
       border-radius: 10px;
-      overflow: hidden;
     }
   </style>
 </head>
 <body>
 
-  <div class="video-container">
-    <video
-      id="my-video"
-      class="video-js vjs-theme-city"
-      controls
-      autoplay
-      preload="auto"
-      width="100%"
-      height="auto"
-      data-setup='{}'>
-      <source src="https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8" type="application/x-mpegURL" />
-      عذرًا، متصفحك لا يدعم تشغيل الفيديو.
-    </video>
-  </div>
+  <video id="video" controls autoplay></video>
 
-  <script src="https://vjs.zencdn.net/8.5.2/video.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script>
+    const video = document.getElementById('video');
+    const videoSrc = 'http://het105a.4rouwanda-shop.store/live/918454578001/index.m3u8'; // ← غيّر الرابط هنا
+
+    if (Hls.isSupported()) {
+      const hls = new Hls();
+      hls.loadSource(videoSrc);
+      hls.attachMedia(video);
+      hls.on(Hls.Events.MANIFEST_PARSED, () => {
+        video.play();
+      });
+    } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+      video.src = videoSrc;
+      video.addEventListener('loadedmetadata', () => {
+        video.play();
+      });
+    } else {
+      alert('متصفحك لا يدعم تشغيل هذا النوع من الفيديو.');
+    }
+  </script>
+
 </body>
 </html>
