--- a/index.html
+++ b/index.html
@@ -870,14 +870,14 @@
             const servers = [
                 {
                     name: "سيرفر رئيسي",
-                    url: "http://het105a.4rouwanda-shop.store/live/918454578001/index.m3u8",
+                    url: "http://front-main.eagle-4k.me:80/live/9fshhuw2z7/54hw7lwwb1/2540.m3u8",
                     type: "hls",
                     badge: "مباشر",
                     ping: 120
                 },
                 {
                     name: "سيرفر احتياطي",
-                    url: "https://bitdash-a.akamaihd.net/content/sintel/hls/playlist.m3u8",
+                    url: "http://front-main.eagle-4k.me:80/live/9fshhuw2z7/54hw7lwwb1/2541.m3u8",
                     type: "hls",
                     badge: "تجريبي",
                     ping: 180
