--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             video.play();
         });
     } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-        video.src = 'http://front-main.eagle-4k.me:80/live/9fshhuw2z7/54hw7lwwb1/2541.m3u8';
+        video.src = 'https://cdn.live.easybroadcast.io/abr_corp/73_arryadia_k2tgcj0/corp/73_arryadia_k2tgcj0_480p/chunks_dvr.m3u8';
         video.addEventListener('loadedmetadata', function() {
             video.play();
         });
