--- a/index.html
+++ b/index.html
@@ -1,18 +1,90 @@
-<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-<video id="video" controls width="100%" height="400"></video>
-<script>
-    const video = document.getElementById('video');
-    if (Hls.isSupported()) {
-        const hls = new Hls();
-        hls.loadSource('STREAM_URL.m3u8');
-        hls.attachMedia(video);
-        hls.on(Hls.Events.MANIFEST_PARSED, function() {
-            video.play();
-        });
-    } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-        video.src = 'https://cdn.live.easybroadcast.io/abr_corp/73_arryadia_k2tgcj0/corp/73_arryadia_k2tgcj0_480p/chunks_dvr.m3u8';
-        video.addEventListener('loadedmetadata', function() {
-            video.play();
-        });
-    }
-</script>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مشغل البث المباشر</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f0f0f0;
+            margin: 0;
+            padding: 20px;
+        }
+        .player-container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            overflow: hidden;
+        }
+        #video {
+            width: 100%;
+            display: block;
+        }
+        .controls {
+            padding: 10px;
+            background: #333;
+            color: white;
+            text-align: center;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <h1>مشغل البث المباشر</h1>
+    <div class="player-container">
+        <video id="video" controls></video>
+        <div class="controls">
+            <button onclick="togglePlay()">تشغيل/إيقاف</button>
+            <button onclick="toggleMute()">كتم/إلغاء</button>
+        </div>
+    </div>
+
+    <!-- مكتبة HLS.js -->
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    
+    <script>
+        const video = document.getElementById('video');
+        let hls;
+
+        // رابط البث (سيتم تمريره عبر البروكسي)
+        const streamUrl = 'https://cdn.live.easybroadcast.io/abr_corp/73_arryadia_k2tgcj0/corp/73_arryadia_k2tgcj0_480p/chunks_dvr.m3u8';
+        
+        // دالة لبدء التشغيل
+        function initPlayer() {
+            if (Hls.isSupported()) {
+                hls = new Hls();
+                hls.loadSource(`proxy.php?url=${encodeURIComponent(streamUrl)}`);
+                hls.attachMedia(video);
+                hls.on(Hls.Events.MANIFEST_PARSED, () => {
+                    video.play();
+                    console.log("البث يعمل الآن!");
+                });
+            } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+                video.src = streamUrl;
+                video.addEventListener('loadedmetadata', () => video.play());
+            } else {
+                alert("المتصفح لا يدعم تشغيل هذا البث!");
+            }
+        }
+
+        // دوال التحكم
+        function togglePlay() {
+            if (video.paused) video.play();
+            else video.pause();
+        }
+
+        function toggleMute() {
+            video.muted = !video.muted;
+        }
+
+        // بدء التشغيل عند تحميل الصفحة
+        window.onload = initPlayer;
+    </script>
+</body>
+</html>
