--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         let hls;
 
         // رابط البث (سيتم تمريره عبر البروكسي)
-        const streamUrl = 'https://cdn.live.easybroadcast.io/abr_corp/73_arryadia_k2tgcj0/corp/73_arryadia_k2tgcj0_480p/chunks_dvr.m3u8';
+        const streamUrl = 'https://plixventroma.sbs/kooora/af0dd8b25d6db11_hd?ts=1752260553&nonce=Paxzn2MM&token=651629541';
         
         // دالة لبدء التشغيل
         function initPlayer() {
