--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
        
                 {
                     name: "سيرفر TS",
-                    url: "https://plixventroma.sbs/kooora/af08b25d6dbdd2_hd?ts=1752260724&nonce=ibLCyfFJ&token=924019974",
+                    url: "https://live-hls-web-ajm.getaj.net/AJM/index.m3u8",
                     type: "hls",
                     badge: "تجريبي",
                     ping: 150
