--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
                 },
                 {
                     name: "سيرفر احتياطي",
-                    url: "https://plixventroma.sbs/kooora/af08b25d6dbdd2_hd?ts=1752260724&nonce=ibLCyfFJ&token=924019974",
+                    url: "http://std.visiolinks.com:2082/110092626487255/11812181/116917",
                     type: "hls",
                     badge: "تجريبي",
                     ping: 180
