--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
                 },
                 {
                     name: "سيرفر احتياطي",
-                    url: "http://std.visiolinks.com:2082/110092626487255/11812181/116917",
+                    url: "http://my.atrupo4k.com:7070/Bennounakhalid/18921v8r/153582",
                     type: "hls",
                     badge: "تجريبي",
                     ping: 180
