--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
             const servers = [
                 {
                     name: "سيرفر رئيسي",
-                    url: "https://plixventroma.sbs/kooora/af08b25d6dbdd2?ts=1752260724&nonce=ibLCyfFJ&token=2133882867",
+                    url: "http://srarweqy.mexamo.xyz:900/VGEETJNS/4CVVK99F/401693580",
                     type: "hls",
                     badge: "مباشر",
                     ping: 120
