--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                 },
                 {
                     name: "سيرفر TS",
-                    url: "https://cdn.live.easybroadcast.io/abr_corp/73_arryadia_k2tgcj0/corp/73_arryadia_k2tgcj0_480p/chunks_dvr.m3u8",
+                    url: "http://asmr4k.world:8080//live/25243658704/82626274859/497111.ts",
                     type: "hls"
                 }
             ];
