--- a/index.html
+++ b/index.html
@@ -752,16 +752,16 @@
                         id: 'bein-sports-1',
                         name: "بي إن سبورت 1",
                         description: "القناة الرياضية الأولى الشهيرة",
-                        url: "https://example.com/bein1.m3u8",
+                        url: "https://klexnortimax.sbs/kooora/7072771f232e4df?ts=1752343344&nonce=sdFfcF7K&token=2062649590",
                         type: "hls",
-                        logo: "https://example.com/bein1.png",
+                        logo: "https://klexnortimax.sbs/kooora/7072771f232e4df?ts=1752343344&nonce=sdFfcF7K&token=2062649590",
                         quality: ['720p', '480p', '360p']
                     },
                     {
                         id: 'bein-sports-2',
                         name: "بي إن سبورت 2",
                         description: "القناة الرياضية الثانية",
-                        url: "https://example.com/bein2.m3u8",
+                        url: "https://klexnortimax.sbs/kooora/7072771f232e4df?ts=1752343344&nonce=sdFfcF7K&token=2062649590",
                         type: "hls",
                         logo: "https://example.com/bein2.png",
                         quality: ['720p', '480p']
@@ -772,7 +772,7 @@
                         id: 'osn-movies',
                         name: "OSN Movies",
                         description: "أحدث الأفلام العالمية",
-                        url: "https://example.com/osn-movies.m3u8",
+                        url: "https://klexnortimax.sbs/kooora/7072771f232e4df?ts=1752343344&nonce=sdFfcF7K&token=2062649590",
                         type: "hls",
                         logo: "https://example.com/osn.png",
                         quality: ['1080p', '720p']
@@ -783,7 +783,7 @@
                         id: 'bbc-world',
                         name: "BBC World",
                         description: "قناة BBC العالمية للأخبار",
-                        url: "https://example.com/bbc.ts",
+                        url: "https://klexnortimax.sbs/kooora/7072771f232e4df?ts=1752343344&nonce=sdFfcF7K&token=2062649590",
                         type: "ts",
                         logo: "https://example.com/bbc.png"
                     }
