--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
             <div class="server-group">
                 <h3 class="server-group-title">
                     <i class="fas fa-film"></i>
-                    القنوات السينمائية
+                  القنوات الرياضية
                 </h3>
                 <div class="server-list" id="movies-servers"></div>
             </div>
@@ -795,7 +795,7 @@
             <div class="server-group">
                 <h3 class="server-group-title">
                     <i class="fas fa-globe-asia"></i>
-                    القنوات الدولية
+                    القنوات الرياضية
                 </h3>
                 <div class="server-list" id="international-servers"></div>
             </div>
@@ -965,7 +965,7 @@
                         id: 'المباراة 2',
                         name: "المباراة 2",
                         description: "الموقع الاول على مستوى بث المباريات",
-                        url: "https://jaxvendilomp.sbs/kooora/7072771f232e4df55_hd?ts=1752346524&nonce=jEwsnk0A&token=819520626",
+                        url: "https://b6dcywv273fzrtm8.cdnlikely.net:8443/hls/yu9ugh1di.m3u8?s=Pg9QMRL5a1nuZMKli04ZMQ&e=1752368283",
                         type: "hls",
                         logo: "https://k.top4top.io/p_3478hxiyr1.png",
                         quality: ['1080p', '720p']
@@ -974,7 +974,7 @@
                         id: 'المباراة 2',
                         name: "المباراة 2",
                         description: "الموقع الاول على مستوى بث المباريات",
-                        url: "https://jaxvendilomp.sbs/kooora/7072771f232e4df55_hd?ts=1752346524&nonce=jEwsnk0A&token=819520626",
+                        url: "https://b6dcywv273fzrtm8.cdnlikely.net:8443/hls/yu9ugh1di.m3u8?s=Pg9QMRL5a1nuZMKli04ZMQ&e=1752368283",
                         type: "hls",
                         logo: "https://k.top4top.io/p_3478hxiyr1.png",
                         quality: ['720p']
@@ -985,7 +985,7 @@
                         id: 'احتياطي',
                         name: "احتياطي",
                         description: "الموقع الاول على مستوى بث المباريات",
-                        url: "https://jaxvendilomp.sbs/kooora/7072771f232e4df55_hd?ts=1752346524&nonce=jEwsnk0A&token=819520626",
+                        url: "https://b6dcywv273fzrtm8.cdnlikely.net:8443/hls/yu9ugh1di.m3u8?s=Pg9QMRL5a1nuZMKli04ZMQ&e=1752368283",
                         type: "hls",
                         logo: "https://k.top4top.io/p_3478hxiyr1.png",
                         quality: ['720p', '480p']
@@ -994,7 +994,7 @@
                         id: 'احتياطي 2',
                         name: "احتياطي 2",
                         description: "الموقع الاول على مستوى بث المباريات",
-                        url: "https://jaxvendilomp.sbs/kooora/7072771f232e4df55_hd?ts=1752346524&nonce=jEwsnk0A&token=819520626",
+                        url: "https://b6dcywv273fzrtm8.cdnlikely.net:8443/hls/yu9ugh1di.m3u8?s=Pg9QMRL5a1nuZMKli04ZMQ&e=1752368283",
                         type: "hls",
                         logo: "https://k.top4top.io/p_3478hxiyr1.png",
                         quality: ['720p']
