--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
                         id: 'السيرفر 3',
                         name: "السيرفر 3 ",
                         description: "الموقع الاول على مستوى بث المباريات",
-                        url: "https://cdn.live.easybroadcast.io/abr_corp/73_arryadia_k2tgcj0/playlist.m3u8",
+                        url: "https://b6dcywv273fzrtm8.cdnlikely.net:8443/hls/yu9ugh1di.m3u8?s=3eW8v_Y7C486vg7MUrY1kw&e=1752368987",
                         type: "hls",
                         logo: "https://k.top4top.io/p_3478hxiyr1.png",
                         quality: ['720p']
