--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
                         id: 'السيرفر 2',
                         name: "السيرفر 2",
                         description: "",
-                        url: "https://groxneltimav.sbs/kooora/7072771f232e4df_hd?ts=1752346402&nonce=XOGZXvqB&token=527308103",
+                        url: "https://klexnortimax.sbs/kooora/7072771f232e4df_hd?ts=1752347792&nonce=9dowqVWs&token=527308103",
                         type: "hls",
                         logo: "https://k.top4top.io/p_3478hxiyr1.png",
                         quality: ['720p', '480p']
@@ -954,7 +954,7 @@
                         id: 'السيرفر 3',
                         name: "السيرفر 3 ",
                         description: "الموقع الاول على مستوى بث المباريات",
-                        url: "https://b6dcywv273fzrtm8.cdnlikely.net:8443/hls/yu9ugh1di.m3u8?s=3eW8v_Y7C486vg7MUrY1kw&e=1752368987",
+                        url: "https://klexnortimax.sbs/kooora/7072771f232e4df_hd?ts=1752347792&nonce=9dowqVWs&token=527308103",
                         type: "hls",
                         logo: "https://k.top4top.io/p_3478hxiyr1.png",
                         quality: ['720p']
@@ -965,7 +965,7 @@
                         id: 'المباراة 2',
                         name: "المباراة 2",
                         description: "الموقع الاول على مستوى بث المباريات",
-                        url: "https://b6dcywv273fzrtm8.cdnlikely.net:8443/hls/yu9ugh1di.m3u8?s=Pg9QMRL5a1nuZMKli04ZMQ&e=1752368283",
+                        url: "https://klexnortimax.sbs/kooora/7072771f232e4df55_hd?ts=1752347658&nonce=sDL5vGj7&token=819520626",
                         type: "hls",
                         logo: "https://k.top4top.io/p_3478hxiyr1.png",
                         quality: ['1080p', '720p']
@@ -974,7 +974,7 @@
                         id: 'المباراة 2',
                         name: "المباراة 2",
                         description: "الموقع الاول على مستوى بث المباريات",
-                        url: "https://b6dcywv273fzrtm8.cdnlikely.net:8443/hls/yu9ugh1di.m3u8?s=Pg9QMRL5a1nuZMKli04ZMQ&e=1752368283",
+                        url: "https://klexnortimax.sbs/kooora/7072771f232e4df55_hd?ts=1752347658&nonce=sDL5vGj7&token=819520626",
                         type: "hls",
                         logo: "https://k.top4top.io/p_3478hxiyr1.png",
                         quality: ['720p']
@@ -985,7 +985,7 @@
                         id: 'احتياطي',
                         name: "احتياطي",
                         description: "الموقع الاول على مستوى بث المباريات",
-                        url: "https://b6dcywv273fzrtm8.cdnlikely.net:8443/hls/yu9ugh1di.m3u8?s=Pg9QMRL5a1nuZMKli04ZMQ&e=1752368283",
+                        url: "https://klexnortimax.sbs/kooora/7072771f232e4df55_hd?ts=1752347658&nonce=sDL5vGj7&token=819520626",
                         type: "hls",
                         logo: "https://k.top4top.io/p_3478hxiyr1.png",
                         quality: ['720p', '480p']
@@ -994,7 +994,7 @@
                         id: 'احتياطي 2',
                         name: "احتياطي 2",
                         description: "الموقع الاول على مستوى بث المباريات",
-                        url: "https://b6dcywv273fzrtm8.cdnlikely.net:8443/hls/yu9ugh1di.m3u8?s=Pg9QMRL5a1nuZMKli04ZMQ&e=1752368283",
+                        url: "https://klexnortimax.sbs/kooora/7072771f232e4df55_hd?ts=1752347658&nonce=sDL5vGj7&token=819520626",
                         type: "hls",
                         logo: "https://k.top4top.io/p_3478hxiyr1.png",
                         quality: ['720p']
