--- a/index.html
+++ b/index.html
@@ -560,21 +560,21 @@
                 {
                     id: 'server1',
                     name: "السيرفر الرئيسي",
-                    url: "https://server1.example.com/stream.m3u8",
+                    url: "https://d3o3cim6uzorb4.cloudfront.net/out/v1/0965e4d7deae49179172426cbfb3bc5e/index_7.m3u8",
                     type: "hls",
                     quality: "HD"
                 },
                 {
                     id: 'server2',
                     name: "السيرفر الاحتياطي",
-                    url: "https://server2.example.com/stream.m3u8",
+                    url: "https://floxnertimab.sbs/kooora/a41a025a0fd4ed1_hd?ts=1752430032&nonce=jIYSVmi8&token=281946004",
                     type: "hls",
                     quality: "HD"
                 },
                 {
                     id: 'server3',
                     name: "السيرفر السريع",
-                    url: "https://server3.example.com/stream.m3u8",
+                    url: "https://shd-gcp-live.edgenextcdn.net/live/bitmovin-mbc-masr-2/754931856515075b0aabf0e583495c68/index.m3u8",
                     type: "hls",
                     quality: "FHD"
                 },
