--- a/index.html
+++ b/index.html
@@ -581,14 +581,14 @@
                 {
                     id: 'server4',
                     name: "السيرفر البديل",
-                    url: "https://server4.example.com/stream.m3u8",
+                    url: "https://shd-gcp-live.edgenextcdn.net/live/bitmovin-mbc-masr-2/754931856515075b0aabf0e583495c68/index.m3u8",
                     type: "hls",
                     quality: "SD"
                 },
                 {
                     id: 'server5',
                     name: "السيرفر الدولي",
-                    url: "https://server5.example.com/stream.m3u8",
+                    url: "https://mbc1-enc.edgenextcdn.net/out/v1/0965e4d7deae49179172426cbfb3bc5e/index_1.m3u8",
                     type: "hls",
                     quality: "HD"
                 }
