--- a/index.html
+++ b/index.html
@@ -574,21 +574,21 @@
                 {
                     id: 'server3',
                     name: "السيرفر السريع",
-                    url: "https://shd-gcp-live.edgenextcdn.net/live/bitmovin-mbc-masr-2/754931856515075b0aabf0e583495c68/index.m3u8",
+                    url: "https://d3o3cim6uzorb4.cloudfront.net/out/v1/0965e4d7deae49179172426cbfb3bc5e/index.m3u8",
                     type: "hls",
                     quality: "FHD"
                 },
                 {
                     id: 'server4',
                     name: "السيرفر البديل",
-                    url: "https://shd-gcp-live.edgenextcdn.net/live/bitmovin-mbc-masr-2/754931856515075b0aabf0e583495c68/index.m3u8",
+                    url: "https://d3o3cim6uzorb4.cloudfront.net/out/v1/0965e4d7deae49179172426cbfb3bc5e/index.m3u8",
                     type: "hls",
                     quality: "SD"
                 },
                 {
                     id: 'server5',
                     name: "السيرفر الدولي",
-                    url: "https://mbc1-enc.edgenextcdn.net/out/v1/0965e4d7deae49179172426cbfb3bc5e/index_1.m3u8",
+                    url: "https://d3o3cim6uzorb4.cloudfront.net/out/v1/0965e4d7deae49179172426cbfb3bc5e/index.m3u8",
                     type: "hls",
                     quality: "HD"
                 }
